# polymarket-bot

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: auto-improve.yml  test.yml
configs/profiles/: aggressive-live.toml  aggressive.toml  aggressive_buyer_detection.toml  auto_aggressive_buyer_disciplined.toml  auto_aggressive_buyer_panic_fade.toml  auto_balanced_mid_blade.toml  auto_balanced_mid_no.toml  auto_balanced_mid_panic_cut.toml  auto_baseline_fresh_pressize.toml  auto_baseline_fresh_qe_combo.toml  auto_baseline_letrun_quality.toml  auto_baseline_letrun_size_up.toml  auto_baseline_persist_fresh_stack.toml  (+228 more)
docs/: AUTONOMOUS_STRATEGY.md  AUTONOMY.md  PROFILES.md  STRATEGIES.md  audit-2026-05-08.md  external-ideas-2026-05-08.md
polymarket_bot/: __init__.py  _atomic_io.py  _ui.py  auto_tuner.py  binance_ws.py  bitcoin.py  categories.py  config.py  dashboard.py  dashboard_html.py  decisions_log.py  dry_run_cli.py  dry_run_compare.py  dry_run_runs.py  edge_strategy.py  equity_tracker.py  external_prices.py  forecast.py  gamma.py  kzer_arb.py  leaderboard.py  live_confirm.py  main.py  mirror.py  models.py  news_strategy.py  notifications.py  polymarket.py  portfolio.py  pricing.py  profiles.py  quant_bitcoin.py  race_strategies.py  smart_money.py  strategy.py  tick_state.py  trading.py  wallet_persistence.py  wallet_resolver.py  weather_forecast.py
reports/: market_reaction_time.md  news_reaction.md  top_wallets_ytd.md  wallet_8b52_detail.md  wallet_edge_directional.md
scripts/: analyst_llm.py  analyze_top_wallets.py  analyze_wallet_8b52.py  auto_improve.py  backtest_grinder.py  cache_warmer.py  close_all.py  com.polymarket.grinder-b.plist  daily_report.py  daily_self_improve.sh  diag_smart_money.py  dry_analyst.py  force_close_resolved.py  fresh_start.py  funnel_debug.py  live_analyst.py  live_promoter.py  manual_sell.py  manual_sell_position.py  market_reaction_time.py  news_reaction.py  rank_copyable_wallets.py  reconcile_forward_log.py  report.sh  run_all.sh  run_autonomous.sh  run_both_dry.sh  run_dry_aggressive.sh  run_dry_edge.sh  run_edge_dry.sh  run_edge_live.sh  run_live_70.sh  run_live_b.sh  run_live_b2.sh  run_live_c.sh  run_live_copy_b.sh  run_live_smart.sh  run_live_win.sh  run_live_zaza.sh  run_news_dry.sh  (+8 more)
tests/: test_analyst_llm.py  test_atomic_io.py  test_categories.py  test_cli_mode_flags.py  test_cli_ux.py  test_dashboard.py  test_decisions_log.py  test_dry_run_cli.py  test_dry_run_compare.py  test_dry_run_runs.py  test_edge_strategy.py  test_equity_tracker.py  test_favorite_dip.py  test_forecast.py  test_gamma_pagination.py  test_journal_persistence_score.py  test_leaderboard_live_cache.py  test_live_analyst.py  test_live_confirm.py  test_live_position_sync.py  test_live_promoter.py  test_market_reaction_time.py  test_mirror.py  test_news_reaction.py  test_news_strategy.py  test_no_persistence_flag.py  test_notifications.py  test_persistence_integration.py  test_persistence_settings.py  test_pricing_refresh.py  test_profiles.py  test_quant_bitcoin.py  test_resolved_sweep.py  test_sell_strategy_edge_cases.py  test_smart_money_equity_hook.py  test_smart_money_top_traders.py  test_strategy.py  test_strategy_loop_error_path.py  test_tick_state.py  test_ui_tick_footer.py  (+6 more)
(+43 files in other folders)
