[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "1.2.1"
description = "Polymarket smart-money copy-trading bot with auto-tuner, trade journal, and BTC edge model"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Benoit Floc'h" }]
requires-python = ">=3.9.10"
keywords = ["polymarket", "trading", "smart-money", "copy-trading", "prediction-markets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "eth-account>=0.13.7",
    "python-dotenv>=1.0.1",
    "py-clob-client>=0.21.0",
    "py-clob-client-v2>=1.0.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[project.scripts]
pmbot = "polymarket_bot.main:app"

[project.urls]
Repository = "https://github.com/novogratz/polymarket-bot"
Issues = "https://github.com/novogratz/polymarket-bot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_bot*"]
exclude = ["tests*", "data*", "docs*", "scripts*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
